--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,6 +11,6 @@ Hey, I'm a Senior Backend Engineer at Topmate. I enjoy working with Java, Python
 
 ---
 
-- Blog [@nileshbhosale](https://nileshbhosale.com/blog)
+- <a href="http://nileshbhosale.com/blog">Blog</a>
 - GitHub [@nileshbhosale](https://github.com/nileshbhosale)
 - Linkedin [@nileshbhosale](nileshbhosale)
