--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,7 @@
 ---
 type: page
 title: About
-date: 2021-03-19
+date: 2023-11-28
 ---
 
 # Nilesh Bhosale
@@ -13,4 +13,4 @@ Hey, I'm a Senior Backend Engineer at Topmate. I enjoy working with Java, Python
 
 - <a href="http://nileshbhosale.com/blog">Blog</a>
 - GitHub [@nileshbhosale](https://github.com/nileshbhosale)
-- Linkedin [@nileshbhosale](nileshbhosale)
+- Linkedin [@nileshbhosale](https://www.linkedin.com/in/nileshbhosale/)
