--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,16 +1,26 @@
 ---
 type: page
-title: Nilesh Bhosale
+title: Welcome to my page
 date: 2023-11-28
 ---
 
-# Nilesh Bhosale
+Lead Dev 💻 | Helping you convert skills >💰Money @Topmate.io 📅 🤝 | 🚀 Startup Guy 🤹🏼 | 50+ topmate sessions 👨🏻‍💻 | Free 1:1 call for freshers seeking any help
 
-Hey, I'm a Senior Backend Engineer at Topmate. I enjoy working with Java, Python and Postgres. 
+Location: Mumbai, Maharashtra, India
 
+Spent a decade developing software for startups, mid-size companies, and also at my own startup. 
 
+My expertise lies in backend development technologies like Spring, Django, PostgreSQL, Cassandra, Kafka, Redis, and Nginx. 
+
+I have worked in various roles from developer to team leader, gaining experience in managing people, handling uncertain requirements, conducting interviews, and training new hires. 
+
+Currently working on solving the problem of creators trying to share knowledge and earn from their network at Topmate.io. 
+
+Follow me for content related to software development, programming, startup tech tips, and new technologies.
 ---
 
 - <a href="http://nileshbhosale.com/blog">Blog</a>
 - GitHub [@nileshbhosale](https://github.com/nileshbhosale)
 - Linkedin [@nileshbhosale](https://www.linkedin.com/in/nileshbhosale/)
+- Twitter [@nileshbhosale91](https://twitter.com/nileshbhosale91)
+- Indie Hacker [@NileshBhosale](https://www.indiehackers.com/NileshBhosale)
