--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,18 +2,18 @@
 
 Lead Dev 💻 | Helping you convert skills >💰Money @Topmate.io 📅 🤝 | 🚀 Startup Guy 🤹🏼 | 50+ topmate sessions 👨🏻‍💻 | Free 1:1 call for freshers seeking any help
 
-##### Location: 
-Mumbai, Maharashtra, India
+##### Location: Mumbai, Maharashtra, India
 
-Spent a decade developing software for startups, mid-size companies, and also at my own startup. 
-
-My expertise lies in backend development technologies like Spring, Django, PostgreSQL, Cassandra, Kafka, Redis, and Nginx. 
+Spent a decade developing software for startups, mid-size companies, and also at my own startup. My expertise lies in backend development technologies like Spring, Django, PostgreSQL, Cassandra, Kafka, Redis, and Nginx. 
 
 I have worked in various roles from developer to team leader, gaining experience in managing people, handling uncertain requirements, conducting interviews, and training new hires. 
 
+
 Currently working on solving the problem of creators trying to share knowledge and earn from their network at Topmate.io. 
 
+
 Follow me for content related to software development, programming, startup tech tips, and new technologies.
+
 
 ##### Skills:
 Java, Spring Framework, Microservices, Cloud Computing, Agile Methodologies, Content Management, Start-ups, SpringBoot, Struts, SQL, JavaScript, Django, Git, Quartz Scheduler, Python, Tomcat, Spring MVC, JMS, Linux, Jenkins
@@ -21,8 +21,11 @@ Java, Spring Framework, Microservices, Cloud Computing, Agile Methodologies, Con
 ##### Experience:
 
 > topmate.io | Backend Lead | May 2022 - Present
+> 
 > Harbour and Hills | Lead Engineer Development | May 2020 - May 2022
+>
 > SugarBox | Principal Software Engineer | May 2017 - May 2020
+>
 > Intrior One Pvt Ltd | Technical Co-Founder | Dec 2015 - April 2017
 
 ---
